2017-05-12  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 41090: Src/Zle/zle_refresh.c, Src/compat.c, Src/pattern.c,
	Src/utils.c, Src/wcwidth9.h, Src/zsh.h, Src/ztype.h,
	configure.ac: Replace iswprint() if unicode9 support is enabled.
	Enable unicode9 if wcwidth() and/or iswprint() is broken.

2017-05-11  Peter Stephenson  <p.stephenson@samsung.com>

	* 41096: Src/string.c: Fix dupstring_wlen() for unmetafied
	string.  It's not safe to assume null termination.

2017-05-09  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Test/D02glob.ztst: Adding comment to test changed
	line number in output.

2017-05-09  Peter Stephenson  <p.stephenson@samsung.com>

	* 41081: Src/utils.c, Test/D02glob.ztst: Symlink expansion
	didn't test all buffer length calculations.

	* 41078: Src/prompt.c, Test/D01prompt.ztst: Empty psvar could
	cause bad reference in prompt expansion.

2017-05-08  Peter Stephenson  <p.stephenson@samsung.com>

	* 41059: Completion/compinit: use 2>&- to avoid error in
	restricted shell.

	* 41073: Src/parse.c, Test/A04redirect.ztst: off-by-one error
	checking for {varid} syntax.

	* users/22688: Src/parse.c, Test/A04redirect.ztst: Allow mixing
	of redirections and arguments after anonymous functions.

	* 41060: Src/parse.c, Test/A04redirect.ztst: combination
	of HERE document and |& was broken by miscounting wordcode owing
	to missing flag.

2017-05-04  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 41038: NEWS: Document recent, backwards-compatible precommand
	modifiers changes.

2017-05-03  Peter Stephenson  <p.stephenson@samsung.com>

	* 41043: Src/exec.c: Close pipes in shell if disowning
	backgrounded job with &!.

2017-05-02  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Functions/Zle/insert-unicode-char: use typeset -g to
	avoid warnnestedvar warning.

2017-04-28  Peter Stephenson  <p.stephenson@samsung.com>

	* 41020: Src/exec.c, Test/A01grammar.ztst: "command -p" was